@@ -1,43 +1,0 @@
-<h1 class="text-center">Dota Heroes</h1>
-
-<div class="container"> 
-
-  <div class="row justify-content-md-center">
-
-    <div class="col" id="comp">
-      <p class="compCell" cellId="1"> 1</p>
-      <p class="compCell" cellId="2"> 2</p>  
-      <p class="compCell" cellId="3"> 3</p> 
-      <p class="compCell" cellId="4"> 4</p> 
-      <p class="compCell" cellId="5"> 5</p>
-    </div>
-    
-    
-  </div>
-
-</div>
-
-<div class="container index" id="dotaSet" >
-  <% dotaData.forEach(function(dotaData) { %>
-      <div class="col" id="dotaHeroCard">
-        <div heroId=<%=dotaData.hero_id%>>            
-          <p><%= dotaData.localized_name %> <%= dotaData.hero_id%></p>
-          <img src="http://cdn.dota2.com/<%= dotaData.img %>" width="100"> <!-- make sure to add http://cdn.dota2.com/-->
-    
-          
-        </div>
-        <br>
-    </div>
-        <% }); %>
-</div>
-
-
-<script>
-
-let compSetup = ['','','','',''];
-document.addEventListener('click', event => {
-  
-  console.log(event) // <--- how to define dotaData.hero_id
-})
-
-</script>
